# Copyright 2011 Free Software Foundation, Inc.
#
# This file is part of GNU Radio
#
# GNU Radio is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3, or (at your option)
# any later version.
#
# GNU Radio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with GNU Radio; see the file COPYING.  If not, write to
# the Free Software Foundation, Inc., 51 Franklin Street,
# Boston, MA 02110-1301, USA.

install(FILES
    nrsc5_l1_fm_encoder_mp1.xml
    nrsc5_l1_fm_encoder_mp2.xml
    nrsc5_l1_fm_encoder_mp3.xml
    nrsc5_l1_fm_encoder_mp11.xml
    nrsc5_l1_fm_encoder_mp5.xml
    nrsc5_l1_fm_encoder_mp5_ms1.xml
    nrsc5_l1_fm_encoder_mp6.xml
    nrsc5_l1_fm_encoder_mp6_ms1.xml
    nrsc5_sis_encoder.xml
    nrsc5_l2_encoder.xml
    nrsc5_hdc_encoder.xml
    nrsc5_psd_encoder.xml DESTINATION share/gnuradio/grc/blocks
)
